- added google fonts  - fixed some minor layout issues

--- a/source/scss/0-settings/_fonts.scss
+++ b/source/scss/0-settings/_fonts.scss
@@ -1,4 +1,5 @@
 $output-bourbon-deprecation-warnings: false;
 
-//Fonts
-$font-stack: 'Open Sans', sans-serif, 'Helvetica Neue';
+//Fonts - Google fonts api key AIzaSyCgnQ_LVoVc7m1ZuqcAuzJHn3R4CcBUubo
+$font-stack-arapey: 'Arapey', sans-serif;
+$font-stack-open: 'Open Sans', sans-serif;
