--- a/source/scss/0-settings/_grid-settings.scss
+++ b/source/scss/0-settings/_grid-settings.scss
@@ -8,10 +8,12 @@ $neat-grid: (
 	gutter: 20px
 );
 
-$medium-screen-up: (
+//For styles tablet all the way up to desktop
+$tablet-screen-up: (
 	media: $medium-screen-big
 );
 
-$medium-screen-down: (
+//For styles in between tablet and desktop
+$desktop-screen-down: (
 	media: $medium-screen-little
 );
